# jps-krs-datacontracts

./: .gitignore  Pipfile  README.md  pyproject.toml  tree.txt
examples/: demo_load_and_emit.py
examples/contracts/json_schemas/: data-table-contract.schema.json
src/datacontracts/: __init__.py
src/datacontracts/contracts/: service__hr__employee.yaml  service_hr_address.yaml
src/datacontracts/contractslib/: type_converter.py  validation.py  validator.py
src/datacontracts/contractslib/emitters/: json_emitter.py  json_schema_emitter.py  yaml_emitter.py
src/datacontracts/contractslib/loaders/: structtype_loader.py
src/datacontracts/contractslib/models/: __init__.py  base.py  datatable.py  option_types.py
src/datacontracts/emitters/: databricks_sql_emitter.py  markdown_docs_emitter.py  spark_structtype_emitter.py
src/datacontracts/emitters/templates/databricks/: alter_table.sql.j2  create_table.sql.j2
src/datacontracts/emitters/templates/docs/: datatable_contract_docs.md.j2
src/datacontracts/loaders/: yaml_loader.py
src/datacontracts/models/: base.py  option_types.py
