[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datacontracts"
version = "0.9.0"
description = "A project for data contracts in Dagster and Databricks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2",
    "pydantic",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pyspark",
]

# Black formatting
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

# Import sorting
[tool.isort]
profile = "black"
line_length = 100

# Type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Setup
[tool.setuptools.packages.find]
where = ["src"]
